--- a/prices-and-taxes/price-service/api-reference/api.yml
+++ b/prices-and-taxes/price-service/api-reference/api.yml
@@ -64,12 +64,6 @@ paths:
           $ref: '#/components/responses/InternalServiceError_500'
       description: |-
         Creates a new price for a specified product.
-
-        *** 
-
-        ### Required scopes
-        * `price.price_manage`
-        * `price.price_manage_by_vendor` - allows to create prices for products belonging to the vendor
       operationId: POST-price-create-price
       requestBody:
         content:
@@ -113,6 +107,7 @@ paths:
       security:
         - OAuth2:
             - price.price_manage
+            - price.price_manage_by_vendor
     get:
       summary: Retrieving all prices
       tags:
@@ -136,11 +131,9 @@ paths:
       description: |-
         Retrieves all prices assigned to the tenant. You can filter the results with query parameters.
 
-        ***
-
-        ### Required scopes
+        ** Additional scopes info**
         No specific scopes are required.
-        Scope `price.price_read_by_vendor` allows to fetch just the prices belonging to the vendor.
+        The `price.price_read_by_vendor` scope allows to fetch just the prices belonging to the vendor.
       security:
         - OAuth2: []
       parameters:
@@ -224,12 +217,6 @@ paths:
         Creates multiple prices. The maximum batch size is 200.
 
         Response for a particular price will be returned at the same position (index) at which that price is located in the request body.
-
-        ***
-
-        ### Required scopes
-        * `price.price_manage`
-        * `price.price_manage_by_vendor` - allows to create prices for products belonging to the vendor
       operationId: POST-price-create-multiple-prices
       requestBody:
         content:
@@ -299,6 +286,7 @@ paths:
       security:
         - OAuth2:
             - price.price_manage
+            - price.price_manage_by_vendor
     put:
       summary: Upserting multiple prices
       tags:
@@ -336,12 +324,6 @@ paths:
         Updates or creates multiple prices. The maximum batch size is 200.
 
         Response for a particular price will be returned at the same position (index) at which that price is located in the request body.
-
-        ***
-
-        ### Required scopes
-        * `price.price_manage`
-        * `price.price_manage_by_vendor` - allows to update prices belonging to the vendor
       operationId: PUT-price-update-multiple-prices
       requestBody:
         content:
@@ -423,6 +405,7 @@ paths:
       security:
         - OAuth2:
             - price.price_manage
+            - price.price_manage_by_vendor
     parameters:
       - name: tenant
         in: path
@@ -491,12 +474,10 @@ paths:
       description: |-
         Retrieves a specified price's details by priceId.
 
-        ***
-
-        ### Required scopes
+        ### Additional scopes info
         No specific scopes are required.
         
-        Scope `price.price_read_by_vendor` allows to fetch just the prices belonging to the vendor.
+        The `price.price_read_by_vendor` scope allows to fetch just the prices belonging to the vendor.
       security:
         - OAuth2: []
       operationId: GET-price-retrieve-price
@@ -527,12 +508,6 @@ paths:
           $ref: '#/components/responses/InternalServiceError_500'
       description: |-
         Updates a specified price's details by priceId, or creates a new one with if a price with the given id doesn't exist yet.
-
-        ***
-
-        ### Required scopes
-        * `price.price_manage`
-        * `price.price_manage_by_vendor` - allows to update prices belonging to the vendor
       requestBody:
         content:
           application/json:
@@ -563,6 +538,7 @@ paths:
       security:
         - OAuth2:
             - price.price_manage
+            - price.price_manage_by vendor
       operationId: PUT-price-update-price
     delete:
       summary: Deleting a price
@@ -583,15 +559,10 @@ paths:
           $ref: '#/components/responses/InternalServiceError_500'
       description: |-
         Deletes a specified price by priceId.
-
-        ***
-
-        ### Required scopes
-        * `price.price_manage`
-        * `price.price_manage_by_vendor` - allows to delete prices belonging to the vendor
       security:
         - OAuth2:
             - price.price_manage
+            - price.price_manage_by_vendor
       operationId: DELETE-price-remove-price
     parameters:
       - name: priceId
@@ -609,12 +580,12 @@ paths:
       description: |-
         Finds the best price based on specified criteria.
 
-        In simplification, the price matching algorithm is made up of the following steps:
-          1. All prices that match the specified criteria are fetched.
-          2. A unified `originalValue` is calculated for each price.
-          3. The price with the lowest `effectiveValue` is returned.
+        To simplify, the price matching algorithm is made up of the following steps:
+          * All prices that match the specified criteria are fetched.
+          * A unified `originalValue` is calculated for each price.
+          * The price with the lowest `effectiveValue` is returned.
 
-        To use the price matching functionality, you need to define appropriate tax classes in the Tax Service and then assign them to products for which prices will be matched through the Product Service.
+        To use the price matching functionality, you need to define appropriate tax classes in the Tax Service and then assign them to products for which prices are matched through the Product Service.
 
         Special cases:
         * If the matched price currency is different than the requested currency, the price is calculated based on exchange rates.
@@ -631,12 +602,6 @@ paths:
         * If requested site's `includesTax` field is not specified:
           * If the `includesTax` field in the price model associated with the price is set to `true`, the matched price is returned as a gross value.
           * If the `includesTax` field in the price model associated with the price is set to `false`, the matched price is returned as a net value.
-
-        ***
-
-        ### Required scopes
-        * `price.price_manage`
-        * `price.price_read`
       responses:
         '200':
           description: OK
@@ -764,6 +729,7 @@ paths:
       security:
         - OAuth2:
             - price.price_manage
+            - price.price_read
       operationId: POST-price-match-prices
   '/price/{tenant}/match-prices-by-context':
     parameters:
@@ -990,11 +956,6 @@ paths:
           $ref: '#/components/responses/InternalServiceError_500'
       description: |-
         Retrieves prices (or a single price) for a list of products.
-
-        ### Required scopes
-        * `price.price_read`
-        
-        * `price.price_manage`
       security:
         - OAuth2:
             - price.price_read
@@ -1035,8 +996,6 @@ paths:
         * Volume pricing, where the price per unit depends on the ordered quantity.
         * Tiered pricing, where the price per unit depends on the tiers that the ordered quantity falls into.
 
-         ### Required scopes
-        * `price.pricemodel_manage`
       security:
         - OAuth2:
             - price.pricemodel_manage
@@ -1148,9 +1107,6 @@ paths:
         Retrieves all price models assigned to the tenant. You can filter the results with query parameters.
 
         A price model can be defined as a repeatable way to sell products in a market with the intention of making a profit. Price models define basic structures for prices.
-
-         ### Required scopes
-        * `price.pricemodel_read`
       security:
         - OAuth2:
             - price.pricemodel_read
@@ -1226,9 +1182,6 @@ paths:
         Retrieves a specified price model's details by priceModelId.
 
         A price model can be defined as a repeatable way to sell products in a market with the intention of making a profit. Price models define basic structures for prices.
-
-         ### Required scopes
-        * `price.pricemodel_read`
       security:
         - OAuth2:
             - price.pricemodel_read
@@ -1301,9 +1254,6 @@ paths:
       summary: Upserting a price model
       description: |
         Updates a specified price model's details by priceModelId, or creates a new one if a price model with the specified id doesn't exist yet.
-
-         ### Required scopes
-        * `price.pricemodel_manage`
       operationId: PUT-price-update-price-model
       security:
         - OAuth2:
@@ -1362,11 +1312,8 @@ paths:
 
         **Important**: If you want to delete a price model that has prices assigned to it, you need to set the `forceDelete` query parameter to `true`. In this case, all prices assigned to the price model will be deleted as well, in an asynchronous manner.
 
-         ### Required scopes
-        * `price.pricemodel_manage`
-        * `price.pricemodel_manage_admin`
-
-          **Note**: The `price.pricemodel_manage_admin` scope is only required if you want to delete a price model that has prices assigned to it.
+        ** Additional scopes info**
+        The `price.pricemodel_manage_admin` scope is only required if you want to delete a price model that has prices assigned to it.
       parameters:
         - schema:
             type: boolean
@@ -1380,6 +1327,7 @@ paths:
       security:
         - OAuth2:
             - price.pricemodel_manage
+            - price.pricemodel_manage_admin
       responses:
         '204':
           description: The request was successful. The price model has been deleted.
@@ -1398,9 +1346,6 @@ paths:
       summary: Retrieving all price lists
       description: |-
         Retrieves all price lists assigned to the tenant. You can filter the results with query parameters.
-
-         ### Required scopes
-        * `price.pricelist_read`
       security:
         - OAuth2:
             - price.pricelist_read
@@ -1448,9 +1393,6 @@ paths:
         - Price lists
       description: |-
         Creates a new price list.
-
-        ### Required scopes
-        * `price.pricelist_manage`
       security:
         - OAuth2:
             - price.pricelist_manage
@@ -1498,9 +1440,6 @@ paths:
       summary: Searching for price lists
       description: |-
         Searching for price lists assigned to the tenant.
-
-         ### Required scopes
-        * `price.pricelist_read`
       security:
         - OAuth2:
             - price.pricelist_read
@@ -1555,9 +1494,6 @@ paths:
       summary: Retrieving a price list
       description: |-
         Retrieves a specified price list's details by priceListId.
-
-         ### Required scopes
-        * `price.pricelist_read`
       security:
         - OAuth2:
             - price.pricelist_read
@@ -1595,9 +1531,6 @@ paths:
       summary: Upserting a price list
       description: |-
         Updates a specified price list by priceListId, or creates a new one if a price list with the specified id doesn't exist yet.
-
-         ### Required scopes
-        * `price.pricelist_manage`
       security:
         - OAuth2:
             - price.pricelist_manage
@@ -1650,9 +1583,6 @@ paths:
         Deletes a specified price list by priceListId.
 
         **Important**: All prices assigned to the price list will be deleted as well, in an asynchronous manner.
-
-        ### Required scopes
-        * `price.pricelist_manage`
       security:
         - OAuth2:
             - price.pricelist_manage
@@ -1667,9 +1597,6 @@ paths:
       summary: Retrieving all prices assigned to a price list
       description: |-
         Retrieves all prices assigned to a specified price list. You can filter the results with query parameters.
-
-         ### Required scopes
-        * `price.pricelist_read`
       security:
         - OAuth2:
             - price.pricelist_read
@@ -1725,9 +1652,6 @@ paths:
         - Prices assigned to price lists
       description: |-
         Creates a new price for a specified price list.
-
-        ### Required scopes
-        * `price.pricelist_manage`
       security:
         - OAuth2:
             - price.pricelist_manage
@@ -1800,9 +1724,6 @@ paths:
         Deletes multiple prices from a specified price list.
 
         To indicate which prices should be deleted from the price list, you need to put their IDs in an array of strings and send it through the request body. The request body should look like this: `["exampleID1", "exampleID2"]`
-
-        ### Required scopes
-        * `price.pricelist_manage`
       security:
         - OAuth2:
             - price.pricelist_manage
@@ -1853,9 +1774,6 @@ paths:
         Creates multiple prices for a specified price list.
 
         Response for a particular price will be returned at the same position (index) at which that price is located in the request body.
-
-        ### Required scopes
-        * `price.pricelist_manage`
       security:
         - OAuth2:
             - price.pricelist_manage
@@ -1868,9 +1786,6 @@ paths:
         Updates or creates multiple prices in a specified price list.
 
         Response for a particular price will be returned at the same position (index) at which that price is located in the request body.
-
-        ### Required scopes
-        * `price.pricelist_manage`
       security:
         - OAuth2:
             - price.pricelist_manage
@@ -1915,9 +1830,6 @@ paths:
       summary: Retrieving a price list's price details
       description: |-
         Retrieves details for a specified price that belongs to a price list.
-
-         ### Required scopes
-        * `price.pricelist_read`
       security:
         - OAuth2:
             - price.pricelist_read
@@ -1955,9 +1867,6 @@ paths:
       summary: Upserting a price in a price list
       description: |-
         Updates a specified price list's price, or creates a new price in a price list if a price with the specified id doesn't exist yet.
-
-         ### Required scopes
-        * `price.pricelist_manage`
       security:
         - OAuth2:
             - price.pricelist_manage
@@ -2008,9 +1917,6 @@ paths:
           $ref: '#/components/responses/InternalServiceError_500'
       description: |-
         Deletes a specified price list's price.
-
-        ### Required scopes
-        * `price.pricelist_manage`
       security:
         - OAuth2:
             - price.pricelist_manage
@@ -3674,6 +3580,7 @@ components:
             price.price_match_own: Needed to use the price matching functionality based on information from the session context.
             price.pricemodel_manage: Needed to manage price models.
             price.pricemodel_read: Needed to retrieve price models.
+            price.price_manage_by_vendor: Needed to manage prices belonging to the vendor.
     CustomerAccessToken:
       type: http
       scheme: bearer
