--- a/prices-and-taxes/price-service/api-reference/api.yml
+++ b/prices-and-taxes/price-service/api-reference/api.yml
@@ -216,7 +216,7 @@ paths:
       description: |-
         Creates multiple prices. The maximum batch size is 200.
 
-        Response for a particular price will be returned at the same position (index) at which that price is located in the request body.
+        Response for a particular price is returned at the same position (index) at which that price is located in the request body.
       operationId: POST-price-create-multiple-prices
       requestBody:
         content:
