--- a/prices-and-taxes/price-service/api-reference/api.yml
+++ b/prices-and-taxes/price-service/api-reference/api.yml
@@ -1786,7 +1786,7 @@ paths:
       description: |-
         Updates or creates multiple prices in a specified price list.
 
-        Response for a particular price will be returned at the same position (index) at which that price is located in the request body.
+        Response for a particular price is returned at the same position (index) at which that price is located in the request body.
       security:
         - OAuth2:
             - price.pricelist_manage
